--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "1.3.2",
     "express": "4.8.5",
     "express-session": "1.7.6",
+    "express-winston": "^0.2.8",
     "mongodb": "1.4.9",
     "mongoose": "3.8.15",
     "python-shell": "0.0.3",
