--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Node.js backend code for Nii Mante Research data",
   "scripts": {
     "test": "make test",
+    "test-watch" : "make test-w",
     "start": "NODE_ENV=development node app.js"
   },
   "dependencies": {
