--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Node.js backend code for Nii Mante Research data",
   "scripts": {
     "test": "make test",
-    "test-watch" : "make test-w",
+    "test-watch": "make test-w",
     "start": "NODE_ENV=development node app.js"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "mongodb": "1.4.9",
     "mongoose": "3.8.15",
     "python-shell": "0.0.3",
+    "winston": "^0.8.0",
     "wolverine": "0.1.3"
   },
   "devDependencies": {
